2020-06-10  Kirit Saelensminde  <kirit@felspar.com>
 Added schema validation for CSJ PUT and PATCH requests.

2020-05-29  Pam Suebvisai  <suebvisai.pam@gmail.com>
 * Added HEAD support for `fostgres-test`.

2020-04-22  Kirit Saelensminde  <kirit@felspar.com>
 * CSJ parsing now throws a proper `parse_error`
 * Special case `parse_error` to map to 400 responses when expected in fg tests.

2019-08-21  Kirit Saelensminde  <kirit@felspar.com>
 Improve the display of test failures from `fostgres-test`.

2019-08-21  Kirit Saelensminde  <kirit@felspar.com>
 Add sending of cookie values from `testserver.cookies` to `fostgres-test`.

2019-08-19  Kirit Saelensminde  <kirit@felspar.com>
 * Add `rm-path` to test scripts so we can remove JSON from variable values.
 * Test scripts can now have the view JSON directly in the GET, PUT etc. calls.

2019-08-13  Pattarawut Imamnuaysup  <pattarawut@hot-now.com>
 Add schema check before insert/update into database and refactor datum for consistent trim

2019-06-24  Pumidon Phathong  <pumidon@hot-now.com>
 GET requests that don't check the body content now return the response body.

2019-06-14  Kirit Saelensminde  <kirit@felspar.com>
 Object APIs can now process JSON arrays into a separate table.

2019-03-07  Kirit Saelensminde  <kirit@felspar.com>
 Add a new view to retry Postgres serialisation errors.

2019-02-22  Kirit Saelensminde  <kirit@felspar.com>
 Add a request logging middleware that stores the per-request log to the database.

2019-02-07  Tle Ekkul  <e.aryuth@gmail.com>
 fostgres.sql supporting precondition

2019-02-05  Kirit Saelensminde  <kirit@felspar.com>
 Fixed a bug in the HTTP tests not doing name look ups correctly.

2019-01-22  Kirit Saelensminde  <kirit@felspar.com>
 Add debug logging of the database JSON schema loader.

2019-01-15  Tle Ekkul  <e.aryuth@gmail.com>
 * Add fostgres.control.pg-error view
 * Add fostgres-tests

2019-01-03  Tle Ekkul  <e.aryuth@gmail.com>
 POST support configuration as an array
