@@ -1,0 +1,8 @@
+{
+    "webserver" : {
+        "views/chain.request": {
+            "view": "test.chain.request"
+        }
+    }
+}
+
